--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <script src="https://kit.fontawesome.com/fea7ed6e9f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="card border-secondary m-4">
+    <div class="card border-secondary m-5">
       <div class="card-header bg-light">
         <h3>Payment form example</h3>
       </div>
       <div class="alert alert-danger m-4" role="alert">
         Some fields are missing
       </div>
-      <form class="row mx-auto">
+      <form class="row m-3">
         <div class="col-5 mb-3">
           <label for="cardNumber" class="form-label">Card #</label>
           <input type="text" class="form-control" id="cardNumber" placeholder="XXXXXXXXXXXXXXXX">
@@ -25,7 +25,7 @@
           <input type="password" class="form-control" id="cvcNumber" placeholder="0000">
         </div>
         <div class="col-4 mb-3">
-          <label for="amount" class="form-label">Amount</label>
+          <label for="amount" class="form-label">Amount</label> <br>
           <input type="currency" class="form-control" id="amount" placeholder="Amount">
         </div>
         <div class="col-6 mb-3">
@@ -53,43 +53,43 @@
         </div>
         <div class="col-6 mb-3 w-100px">
             <p>We accept:</p>
-            <fieldset id="payment_method" class="d-flex flex-row bg-secondary rounded p-2 w-25">
-                <div class="form-check me-3">
+            <fieldset id="payment_method" class="d-flex flex-row bg-secondary rounded p-2 w-50">
+                <div class="form-check ms-4 me-5">
                     <input class="form-check-input" type="radio" name="cardType" id="cardType1" checked>
                     <label class="form-check-label" for="cardType1">
-                    <i class="fa-brands fa-cc-mastercard"></i>
+                    <i class="fa-brands fa-cc-mastercard fa-xl text-white"></i>
                     </label>
                 </div>
-                <div class="form-check me-3">
+                <div class="form-check me-5">
                     <input class="form-check-input" type="radio" name="cardType" id="cardType2">
                     <label class="form-check-label" for="cardType2">
-                    <i class="fa-brands fa-cc-visa"></i>
+                    <i class="fa-brands fa-cc-visa fa-xl text-white"></i>
                     </label>
                 </div>
-                <div class="form-check me-3">
+                <div class="form-check me-5">
                     <input class="form-check-input" type="radio" name="cardType" id="cardType3">
                     <label class="form-check-label" for="cardType3">
-                    <i class="fa-brands fa-cc-diners-club"></i>
+                    <i class="fa-brands fa-cc-diners-club fa-xl text-white"></i>
                     </label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="cardType" id="cardType4">
                     <label class="form-check-label" for="cardType4">
-                    <i class="fa-brands fa-cc-amex"></i>
+                    <i class="fa-brands fa-cc-amex fa-xl text-white"></i>
                     </label>
                 </div>
             </fieldset>
         </div>
         <div class="col-6 justify-content-end mb-5">
             <label for="message" class="form-label">Message</label>
-            <textarea class="form-control" aria-label="With textarea" id="message" aria-describedby="emailHelp" style="height: 100px"></textarea>
+            <textarea class="form-control" aria-label="With textarea" id="message" aria-describedby="messageHelp" style="height: 100px"></textarea>
             <div id="messageHelp" class="form-text">Add any notes here.</div>
         </div>
-        <div class="card-footer bg-light p-3 d-flex justify-content-end">
-          <button type="close" class="btn btn-secondary">Cancel</button>
-          <button type="submit" class="btn btn-primary ms-2">Send</button>
-        </div>
       </form>
+      <div class="card-footer bg-light p-3 d-flex justify-content-end m-0">
+          <button type="button" class="btn btn-secondary">Cancel</button>
+          <button type="submit" class="btn btn-primary ms-2">Send</button>
+      </div>
     </div>
 
 
